# BinaryTree

./: .gitignore  .gitlab-ci.yml  Binary_tree.qbs  CMakeLists.txt  Doxyfile  README.md
app/: main.c
docs/html/: annotated.html  classes.html  data_8c.html  data_8c__incl.map  data_8h.html  data_8h__dep__incl.map  data_8h__incl.map  data_8h_source.html  dir_000000_000001.html  dir_000001_000002.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_d422163b96683743ed3963d4aac17747.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__data.html  group__tree.html  group__tree.js  index.html  main_8c.html  main_8c__incl.map  menudata.js  modules.html  navtreedata.js  navtreeindex0.js  struct___tree.html  struct___tree__coll__graph.map  struct___tree__coll__graph.md5  struct___tree_node.html  struct___tree_node__coll__graph.map  struct___tree_node__coll__graph.md5  struct_data__t.html  tree_8c.html  tree_8c.js  (+7 more)
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+17 more)
src/: CMakeLists.txt  data.c  data.h  ioutils.c  ioutils.h  main.c  mymalloc.c  mymalloc.h  tree.c  tree.h
src/include/: tree.h
testFiles/: input4.txt  output1.txt  output2.txt  output4.txt
test_files/: output1.txt  output3.txt  output4.txt  output5.txt  output6.txt
tests/: CMakeLists.txt  minunit.h  tests.c  tests.cpp
